{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 19,
  "lineage": "a5291a4e-b00d-975c-a14e-284a219a4d78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:internet-gateway/igw-06ee452e5fb5eecd2",
            "id": "igw-06ee452e5fb5eecd2",
            "owner_id": "839747340645",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-0db0b5ed7fc7198b0"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:route-table/rtb-062de9dc2bc85ed0b",
            "id": "rtb-062de9dc2bc85ed0b",
            "owner_id": "839747340645",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ee452e5fb5eecd2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0db0b5ed7fc7198b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4aba3e94bdc8f0",
            "route_table_id": "rtb-062de9dc2bc85ed0b",
            "subnet_id": "subnet-0b313b7df2813bc4f"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e0b0d31f94944ef",
            "route_table_id": "rtb-062de9dc2bc85ed0b",
            "subnet_id": "subnet-0621658cbc17b632b"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:security-group/sg-05a08d2d8e92cd89c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a08d2d8e92cd89c",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "839747340645",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db0b5ed7fc7198b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "152.204.239.70/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2471297753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a08d2d8e92cd89c",
            "security_group_rule_id": "sgr-0ba207e90b7a2ba28",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:subnet/subnet-0b313b7df2813bc4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b313b7df2813bc4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839747340645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-0db0b5ed7fc7198b0"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:subnet/subnet-0621658cbc17b632b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0621658cbc17b632b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839747340645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-0db0b5ed7fc7198b0"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839747340645:vpc/vpc-0db0b5ed7fc7198b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abce73d56a6e4eaa",
            "default_route_table_id": "rtb-023c6c78a2c811a56",
            "default_security_group_id": "sg-0b9ab3adc5ac9de14",
            "dhcp_options_id": "dopt-009cc343eb235faab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db0b5ed7fc7198b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023c6c78a2c811a56",
            "owner_id": "839747340645",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}